/* Changes-1.07.txt */

--- New features -----

CCore/inc/StepEval.h

  Engine for step evaluation with dependencies.

CondLangLR1

DDL2

Keywords

--- Updates ---

CCore/inc/NewDelete.h

  DefaultHeapAlloc is added

CCore/inc/Random.h

  RandomBase class and methods select_uint are added

CCore/inc/Exception.h

  ReportExceptionTo is added

CCore/inc/array/TempArray.h

  reset() method is added

----------------------