@@ -23,22 +23,42 @@ namespace CCore {
 
 /* ApplyToPtr() */
 
-template <class T,class FuncInit>
-void ApplyToPtr(void *ptr,FuncInit func_init)
+template <class T,class FuncInit,class ... SS>
+void ApplyToPtr(void *ptr,FuncInit func_init,SS && ... ss)
  {
   FunctorTypeOf<FuncInit> func(func_init);
 
-  func(static_cast<T *>(ptr));
+  func(static_cast<T *>(ptr), std::forward<SS>(ss)... );
  }
 
 /* ApplyToPtr_const() */
 
-template <class T,class FuncInit>
-void ApplyToPtr_const(const void *ptr,FuncInit func_init)
+template <class T,class FuncInit,class ... SS>
+void ApplyToPtr_const(const void *ptr,FuncInit func_init,SS && ... ss)
  {
   FunctorTypeOf<FuncInit> func(func_init);
 
-  func(static_cast<const T *>(ptr));
+  func(static_cast<const T *>(ptr), std::forward<SS>(ss)... );
+ }
+
+/* ApplyToPtr2() */
+
+template <class Ret,class T,class FuncInit>
+Ret ApplyToPtr2(void *ptr1,void *ptr2,FuncInit func_init)
+ {
+  FunctorTypeOf<FuncInit> func(func_init);
+
+  return func(static_cast<T *>(ptr1),static_cast<T *>(ptr2));
+ }
+
+/* ApplyToPtr2_const() */
+
+template <class Ret,class T,class FuncInit>
+Ret ApplyToPtr2_const(const void *ptr1,const void *ptr2,FuncInit func_init)
+ {
+  FunctorTypeOf<FuncInit> func(func_init);
+
+  return func(static_cast<const T *>(ptr1),static_cast<const T *>(ptr2));
  }
 
 /* classes */
@@ -48,6 +68,8 @@ template <class P> class PrintAnyObj;
 template <class ... TT> class AnyPtr;
 
 template <class ... TT> class AnyPtr_const;
+
+template <class T,class S> struct ElaborateAnyPtrBind;
 
 /* class PrintAnyObj<P> */
 
@@ -100,14 +122,14 @@ class AnyPtr
    template <class T>
    T * castPtr() const { if( hasType<T>() ) return static_cast<T *>(ptr); return 0; }
    
-   template <class FuncInit>
-   void apply(FuncInit func_init) const
+   template <class FuncInit,class ... SS>
+   void apply(FuncInit func_init,SS && ... ss) const
     {
-     using FuncType = void (*)(void *ptr,FuncInit func_init) ; 
+     using FuncType = void (*)(void *ptr,FuncInit func_init,SS && ...) ; 
      
-     static const FuncType Table[]={ ApplyToPtr<TT,FuncInit>... };
+     static const FuncType Table[]={ ApplyToPtr<TT,FuncInit,SS...>... };
      
-     if( type ) Table[type-1](ptr,func_init);
+     if( type ) Table[type-1](ptr,func_init, std::forward<SS>(ss)... );
     }
    
    template <class T,class FuncInit>
@@ -116,6 +138,22 @@ class AnyPtr
      if( hasType<T>() ) ApplyToPtr<T>(ptr,func_init);
     }
  
+   // Binary
+   
+   template <class Ret,class FuncInit>
+   static Ret Binary(AnyPtr<TT...> a,AnyPtr<TT...> b,FuncInit func_init)
+    {
+     if( a.type!=b.type ) return Ret(a.type,b.type);
+     
+     using FuncType = Ret (*)(void *,void *,FuncInit func_init) ; 
+     
+     static const FuncType Table[]={ ApplyToPtr2<Ret,TT,FuncInit>... };
+     
+     if( a.type ) return Table[a.type-1](a.ptr,b.ptr,func_init);
+     
+     return Ret();
+    }
+   
    // print object
    
    template <class P>
@@ -169,20 +207,36 @@ class AnyPtr_const
    template <class T>
    const T * castPtr() const { if( hasType<T>() ) return static_cast<const T *>(ptr); return 0; }
    
-   template <class FuncInit>
-   void apply(FuncInit func_init) const
+   template <class FuncInit,class ... SS>
+   void apply(FuncInit func_init,SS && ... ss) const
     {
-     using FuncType = void (*)(const void *ptr,FuncInit func_init) ; 
+     using FuncType = void (*)(const void *ptr,FuncInit func_init,SS && ...) ; 
      
-     static const FuncType Table[]={ ApplyToPtr_const<TT,FuncInit>... };
+     static const FuncType Table[]={ ApplyToPtr_const<TT,FuncInit,SS...>... };
      
-     if( type ) Table[type-1](ptr,func_init);
+     if( type ) Table[type-1](ptr,func_init, std::forward<SS>(ss)... );
     }
    
    template <class T,class FuncInit>
    void applyFor(FuncInit func_init) const
     {
      if( hasType<T>() ) ApplyToPtr_const<T>(ptr,func_init);
+    }
+   
+   // Binary
+   
+   template <class Ret,class FuncInit>
+   static Ret Binary(AnyPtr_const<TT...> a,AnyPtr_const<TT...> b,FuncInit func_init)
+    {
+     if( a.type!=b.type ) return Ret(a.type,b.type);
+     
+     using FuncType = Ret (*)(const void *,const void *,FuncInit func_init) ; 
+     
+     static const FuncType Table[]={ ApplyToPtr2_const<Ret,TT,FuncInit>... };
+     
+     if( a.type ) return Table[a.type-1](a.ptr,b.ptr,func_init);
+     
+     return Ret();
     }
    
    // print object
@@ -204,6 +258,159 @@ class AnyPtr_const
      Copy_no_throw = true
     };
  };
+
+/* struct ElaborateAnyPtrBind<T,S> */
+
+template <class T,class S>
+struct ElaborateAnyPtrBind
+ {
+  T &obj;
+  S &&arg;
+  
+  ElaborateAnyPtrBind(T &obj_,S &&arg_) : obj(obj_),arg( std::forward<S>(arg_) ) {}
+  
+  template <class ... SS>
+  void operator () (SS && ... ss)
+   {
+    obj( std::forward<S>(arg) , std::forward<SS>(ss)... );
+   }
+ };
+
+template <class T,class ... TT>
+struct ElaborateAnyPtrBind<T,AnyPtr<TT...> >
+ {
+  T &obj;
+  AnyPtr<TT...> &&arg;
+  
+  ElaborateAnyPtrBind(T &obj_,AnyPtr<TT...> &&arg_) : obj(obj_),arg( std::forward<AnyPtr<TT...> >(arg_) ) {}
+  
+  template <class ... SS>
+  void operator () (SS && ... ss)
+   {
+    arg.apply( FunctorRef(obj) , std::forward<SS>(ss)... );
+   }
+ };
+
+template <class T,class ... TT>
+struct ElaborateAnyPtrBind<T,AnyPtr<TT...> &>
+ {
+  T &obj;
+  AnyPtr<TT...> &arg;
+  
+  ElaborateAnyPtrBind(T &obj_,AnyPtr<TT...> &arg_) : obj(obj_),arg(arg_) {}
+  
+  template <class ... SS>
+  void operator () (SS && ... ss)
+   {
+    arg.apply( FunctorRef(obj) , std::forward<SS>(ss)... );
+   }
+ };
+
+template <class T,class ... TT>
+struct ElaborateAnyPtrBind<T,const AnyPtr<TT...> >
+ {
+  T &obj;
+  const AnyPtr<TT...> &&arg;
+  
+  ElaborateAnyPtrBind(T &obj_,const AnyPtr<TT...> &&arg_) : obj(obj_),arg( std::forward<const AnyPtr<TT...> >(arg_) ) {}
+  
+  template <class ... SS>
+  void operator () (SS && ... ss)
+   {
+    arg.apply( FunctorRef(obj) , std::forward<SS>(ss)... );
+   }
+ };
+
+template <class T,class ... TT>
+struct ElaborateAnyPtrBind<T,const AnyPtr<TT...> &>
+ {
+  T &obj;
+  const AnyPtr<TT...> &arg;
+  
+  ElaborateAnyPtrBind(T &obj_,const AnyPtr<TT...> &arg_) : obj(obj_),arg(arg_) {}
+  
+  template <class ... SS>
+  void operator () (SS && ... ss)
+   {
+    arg.apply( FunctorRef(obj) , std::forward<SS>(ss)... );
+   }
+ };
+
+template <class T,class ... TT>
+struct ElaborateAnyPtrBind<T,AnyPtr_const<TT...> >
+ {
+  T &obj;
+  AnyPtr_const<TT...> &&arg;
+  
+  ElaborateAnyPtrBind(T &obj_,AnyPtr_const<TT...> &&arg_) : obj(obj_),arg( std::forward<AnyPtr_const<TT...> >(arg_) ) {}
+  
+  template <class ... SS>
+  void operator () (SS && ... ss)
+   {
+    arg.apply( FunctorRef(obj) , std::forward<SS>(ss)... );
+   }
+ };
+
+template <class T,class ... TT>
+struct ElaborateAnyPtrBind<T,AnyPtr_const<TT...> &>
+ {
+  T &obj;
+  AnyPtr_const<TT...> &arg;
+  
+  ElaborateAnyPtrBind(T &obj_,AnyPtr_const<TT...> &arg_) : obj(obj_),arg(arg_) {}
+  
+  template <class ... SS>
+  void operator () (SS && ... ss)
+   {
+    arg.apply( FunctorRef(obj) , std::forward<SS>(ss)... );
+   }
+ };
+
+template <class T,class ... TT>
+struct ElaborateAnyPtrBind<T,const AnyPtr_const<TT...> >
+ {
+  T &obj;
+  const AnyPtr_const<TT...> &&arg;
+  
+  ElaborateAnyPtrBind(T &obj_,const AnyPtr_const<TT...> &&arg_) : obj(obj_),arg( std::forward<const AnyPtr_const<TT...> >(arg_) ) {}
+  
+  template <class ... SS>
+  void operator () (SS && ... ss)
+   {
+    arg.apply( FunctorRef(obj) , std::forward<SS>(ss)... );
+   }
+ };
+
+template <class T,class ... TT>
+struct ElaborateAnyPtrBind<T,const AnyPtr_const<TT...> &>
+ {
+  T &obj;
+  const AnyPtr_const<TT...> &arg;
+  
+  ElaborateAnyPtrBind(T &obj_,const AnyPtr_const<TT...> &arg_) : obj(obj_),arg(arg_) {}
+  
+  template <class ... SS>
+  void operator () (SS && ... ss)
+   {
+    arg.apply( FunctorRef(obj) , std::forward<SS>(ss)... );
+   }
+ };
+
+/* ElaborateAnyPtr() */
+
+template <class T>
+void ElaborateAnyPtr(T &obj)
+ {
+  obj();
+ }
+
+template <class T,class S,class ... SS>
+void ElaborateAnyPtr(T &obj,S && s,SS && ... ss)
+ {
+  ElaborateAnyPtrBind<T,S> bind(obj, std::forward<S>(s) );
+  
+  ElaborateAnyPtr(bind, std::forward<SS>(ss)... );
+ }
 
 } // namespace CCore
  
